--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -70,11 +70,11 @@ input[type="text"]:hover {
     line-height: 1.5;
     padding: 0.375rem 0.75rem;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 12px;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     vertical-align: middle;
 }
 
-.button:active{
-    
+.button1:active{
+    transform: translateY(4px);
 }
